# nvidiarouter

./: .dockerignore  .env  .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  PLAN.md  README.md  SPECREGISTRY.md  TODO-parkour-ensemble.md  TODO-parkour-refinement.md  TODO-parkour.md  TODO.md  docker-compose.yml  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml  release.yml
.spec/: code-map.json  code-trace.json
.spec/skills/: manifest.json
.spec/skills/collect-delivery-evidence/: SKILL.md
.spec/skills/evaluate-quality-model/: SKILL.md
.spec/skills/load-governed-specs/: SKILL.md
.spec/skills/plan-from-specs/: SKILL.md
.spec/skills/propose-not-publish/: SKILL.md
.spec/skills/register-task-session/: SKILL.md
.spec/skills/report-spec-problems/: SKILL.md
.spec/skills/resolve-uncovered-guidance/: SKILL.md
.spec/skills/run-compliance-loop/: SKILL.md
.spec/skills/search-spec-context/: SKILL.md
.spec/skills/verify-conformance/: SKILL.md
deploy/: prometheus.yml
deploy/grafana/provisioning/dashboards/: dashboards.yml  smartroute.json
nvidia_smartroute/: __init__.py  affinity.py  bandit.py  cache.py  circuit.py  cli.py  concurrency.py  config.py  cost.py  discovery.py  keypool.py  logging_config.py  metrics.py  model_catalog.py  prometheus.py  recommend.py  virtual_models.py  web.py
nvidia_smartroute.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nvidia_smartroute/agents/: __init__.py  orchestrator.py
nvidia_smartroute/gateway/: completion.py  images.py  nim_client.py  recording.py  runtime.py  server.py  streaming.py
nvidia_smartroute/parkour/: __init__.py  engine.py  ensemble.py  planning.py  refinement.py  research.py  scheduler.py  service.py  telemetry.py
nvidia_smartroute/routing/: router.py
nvidia_smartroute/tui/: __init__.py  dashboard.py
specs/: .specregistry.json  AGENT_OPERATING_RULES.md  CODING_STANDARDS.md  COST.md  GATEWAY_API.md  GLOBAL_SECURITY.md  IMPLEMENTATION_EVIDENCE.md  MODEL_DISCOVERY.md  OBSERVABILITY.md  PARKOUR.md  PARKOUR_ENSEMBLE.md  PARKOUR_REFINEMENT.md  PARKOUR_RESEARCH.md  PROJECT_PROFILE.md  RECOMMENDATION.md  ROUTING.md  SDD_OPERATING_MODEL.md  SECURITY_AND_KEYS.md  SECURITY_AND_SECRETS.md  SPEC_AUTHORING_STANDARD.md  SPEC_GOVERNANCE.md  TOKENOMICS.md  TRACEABILITY_AND_OBSERVABILITY.md
tests/: __init__.py  conftest.py  test_affinity.py  test_basic.py  test_features.py  test_parkour.py  test_parkour_engine.py  test_parkour_ensemble.py  test_parkour_gateway.py  test_parkour_grounding.py  test_parkour_refinement.py  test_parkour_research.py  test_parkour_scheduler.py  test_parkour_telemetry.py  test_recommend.py  test_routing.py
