[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-smartroute"
description = "NVIDIA-SmartRoute-CLI: OpenAI-compatible API gateway for NVIDIA NIM with dynamic agent scaling"
version = "0.1.0"
authors = [
    {name = "NVIDIA-SmartRoute-CLI Developer", email = "dev@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "structlog>=23.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
nvidia-smartroute = "nvidia_smartroute.cli:app"

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "specs*", 
    ".spec*", 
    "tests*", 
    "*.md", 
    "*.txt",
    ".*",
    "__pycache__",
    "*.pyc",
    ".git*",
    "AGENTS.md",
    "SPECREGISTRY.md",
    "PLAN.md"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = "."

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
# E501 (line length) is advisory here — keyword tables and long f-strings are
# left readable rather than wrapped.
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true